--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,24 +36,24 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
         android:textSize="28sp"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
         android:inputType="number"
         android:maxLength="2"
-        app:layout_constraintEnd_toStartOf="@+id/semicolon"
+        android:importantForAutofill="no"
+        app:layout_constraintEnd_toStartOf="@+id/colon"
         app:layout_constraintStart_toEndOf="@id/captionView"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:importantForAutofill="no"
         tools:text="00" />
 
     <TextView
-        android:id="@+id/semicolon"
+        android:id="@+id/colon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="28dp"
         android:textSize="20sp"
         android:inputType="none"
-        android:text="@string/semicolon"
+        android:text="@string/colon"
         app:layout_constraintEnd_toStartOf="@+id/secondEdit"
         app:layout_constraintStart_toEndOf="@id/minuteEdit"
         app:layout_constraintBottom_toBottomOf="parent" />
@@ -64,12 +64,13 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
         android:textSize="28sp"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
         android:inputType="number"
         android:maxLength="2"
+        android:importantForAutofill="no"
         app:layout_constraintEnd_toStartOf="@+id/newTimerButton"
-        app:layout_constraintStart_toEndOf="@id/captionView"
+        app:layout_constraintStart_toEndOf="@id/colon"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:text="00" />
 
