--- a/app/src/main/res/layout/timers_item.xml
+++ b/app/src/main/res/layout/timers_item.xml
@@ -19,22 +19,35 @@
             android:layout_height="8dp"
             android:layout_marginStart="16dp"
             android:background="@drawable/blinking_circle"
+            android:contentDescription="@string/blink"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-             />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/time"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/blinking_indicator"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="00:00:00:00"
             />
+
+        <com.example.timers.CustomView
+            android:id="@+id/custom_view"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="10dp"
+            app:custom_color="@color/purple_500"
+            app:custom_style="fill"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/start_pause_button"
+            app:layout_constraintStart_toEndOf="@id/time"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/start_pause_button"
@@ -45,17 +58,18 @@
             android:padding="8dp"
             android:src="@drawable/ic_baseline_play_arrow_24"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/restart_button"
+            app:layout_constraintEnd_toStartOf="@id/reset_button"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
-            android:id="@+id/restart_button"
+            android:id="@+id/reset_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
             android:background="?android:attr/selectableItemBackground"
             android:padding="8dp"
             android:src="@drawable/ic_baseline_refresh_24"
+            android:contentDescription="@string/reset"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/delete_button"
             app:layout_constraintTop_toTopOf="parent" />
@@ -68,6 +82,7 @@
             android:background="?android:attr/selectableItemBackground"
             android:padding="8dp"
             android:src="@drawable/ic_baseline_delete_24"
+            android:contentDescription="@string/delete"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
