--- a/app/src/main/res/layout/timers_item.xml
+++ b/app/src/main/res/layout/timers_item.xml
@@ -17,7 +17,8 @@
             android:id="@+id/blinking_indicator"
             android:layout_width="8dp"
             android:layout_height="8dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="10dp"
             android:background="@drawable/blinking_circle"
             android:contentDescription="@string/blink"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -28,7 +29,7 @@
             android:id="@+id/time"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="8dp"
             android:layout_marginEnd="10dp"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -41,14 +42,14 @@
             android:id="@+id/custom_view"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginEnd="10dp"
-            app:custom_color="@color/purple_500"
+            android:layout_marginEnd="8dp"
+            app:custom_color="@color/blue_500"
             app:custom_style="fill"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/start_pause_button"
             app:layout_constraintStart_toEndOf="@id/time"
             app:layout_constraintTop_toTopOf="parent" />
-
+<!--
         <ImageButton
             android:id="@+id/start_pause_button"
             android:layout_width="0dp"
@@ -60,12 +61,23 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/reset_button"
             app:layout_constraintTop_toTopOf="parent" />
+-->
+        <Button
+            android:id="@+id/start_pause_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="4dp"
+            android:padding="8dp"
+            android:text="@string/start"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/reset_button"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/reset_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="4dp"
             android:background="?android:attr/selectableItemBackground"
             android:padding="8dp"
             android:src="@drawable/ic_baseline_refresh_24"
