--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="indigo_A100">#FF8C9EFF</color>
+    <color name="blue_200">#90CAF9</color>
+    <color name="blue_500">#03A9F4</color>
+    <color name="blue_700">#1976D2</color>
+
+
+    <color name="purple_100">#FFBB86FC</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
